--- a/buildSrcBack/build.gradle
+++ b/buildSrcBack/build.gradle
@@ -7,7 +7,7 @@ plugins {
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile 'com.bihe0832.android:lib-wrapper:3.2.8'
+//    compile 'com.bihe0832.android:lib-wrapper:'
     compile 'com.android.tools.build:gradle:3.2.1'
     compile group: 'org.javassist', name: 'javassist', version: '3.22.0-GA'
 }
@@ -21,5 +21,5 @@ allprojects {
     }
 }
 // 将该插件上传到本地Maven库
-group='com.happy.plugin'
+group='com.bihe0832.android.plugin'
 version='1.0.0'
