Dialog bug 修复，增加内存泄漏检测，优化用户授权及初始化

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework,LibWrapper"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibDialog"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -57,7 +57,7 @@ ext.moduleInfo = [
                 "artifactId"         : "",
                 "apidependenciesList": [
                         "Application", "CommonTest",
-                        "com.android.support:design:${project.android_support_version}",
+                        "com.android.support:design:${project.android_support_version}"
                 ]
         ],
         "Application"               : [
@@ -192,9 +192,10 @@ ext.moduleInfo = [
                         "LibWrapper", "LibLifecycle"
                 ],
                 "specialdependenciesList": [
-                        "kapt": [
-                                "com.github.bumptech.glide:compiler:${project.glide_version}"
-                        ]
+                        "kapt"      : ["com.github.bumptech.glide:compiler:${project.glide_version}"],
+                        "debugApi"  : ["com.squareup.leakcanary:leakcanary-android:1.5.1"],
+                        "releaseApi": ["com.squareup.leakcanary:leakcanary-android-no-op:1.5.1"]
+
                 ]
         ],
         "LibWrapper"                : [
@@ -296,7 +297,7 @@ ext.moduleInfo = [
                 "artifactId"         : "lib-gson",
                 "apidependenciesList": [
                         "com.google.code.gson:gson:${project.gson_version}",
-                        "LibCommonUtils","LibLog",
+                        "LibCommonUtils", "LibLog",
                 ]
         ],
         "LibHttpCommon"             : [
@@ -307,7 +308,7 @@ ext.moduleInfo = [
         "LibHttpAdvanced"           : [
                 "version"            : "4.20.0",
                 "artifactId"         : "lib-http-advanced",
-                "apidependenciesList": ["LibHttpCommon", "LibGson","LibAAF"]
+                "apidependenciesList": ["LibHttpCommon", "LibGson", "LibAAF"]
         ],
         "LibSqlite"                 : [
                 "version"            : "4.20.0",
@@ -369,7 +370,7 @@ ext.moduleInfo = [
                 "version"            : "4.20.3",
                 "artifactId"         : "lib-download",
                 "apidependenciesList": [
-                        "LibDialog","LibFile", "LibRequest", "LibThread", "LibSqlite",
+                        "LibDialog", "LibFile", "LibRequest", "LibThread", "LibSqlite",
                         "LibAPK", "LibNotification", "LibInstall", "LibHttpAdvanced",
                         "LibCommonUIUtils"
                 ]
