--- a/BaseTest/src/main/AndroidManifest.xml
+++ b/BaseTest/src/main/AndroidManifest.xml
@@ -1,80 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.bihe0832.android.base.test">
+    package="com.bihe0832.android.base.test">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-            android:allowBackup="true"
-            android:icon="@mipmap/icon"
-            android:label="@string/app_name"
-            android:supportsRtl="true">
+        android:name="com.bihe0832.android.base.test.TestApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/icon"
+        android:label="@string/app_name"
+        android:supportsRtl="true">
 
 
         <provider
-                android:name="com.bihe0832.android.base.test.ipc.provider.MainBinderProvider"
-                android:authorities="${applicationId}.process_dispatcher_main" />
+            android:name="com.bihe0832.android.base.test.ipc.provider.MainBinderProvider"
+            android:authorities="${applicationId}.process_dispatcher_main" />
 
         <provider
-                android:name="com.bihe0832.android.base.test.ipc.provider.TestBinderProvider"
-                android:authorities="${applicationId}.process_dispatcher_other"
-                android:process=":test" />
+            android:name="com.bihe0832.android.base.test.ipc.provider.TestBinderProvider"
+            android:authorities="${applicationId}.process_dispatcher_other"
+            android:process=":test" />
 
         <activity
-                android:name="com.bihe0832.android.base.test.ipc.TestIPCActivity"
-                android:configChanges="orientation|screenSize|keyboardHidden|layoutDirection"
-                android:screenOrientation="portrait"
-                android:theme="@style/activityTheme" />
+            android:name="com.bihe0832.android.base.test.ipc.TestIPCActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden|layoutDirection"
+            android:screenOrientation="portrait"
+            android:theme="@style/activityTheme" />
 
         <activity
-                android:name="com.bihe0832.android.base.test.ipc.TestIPC1Activity"
-                android:configChanges="orientation|screenSize|keyboardHidden|layoutDirection"
-                android:screenOrientation="portrait"
-                android:process=":test"
-                android:theme="@style/activityTheme" />
+            android:name="com.bihe0832.android.base.test.ipc.TestIPC1Activity"
+            android:configChanges="orientation|screenSize|keyboardHidden|layoutDirection"
+            android:process=":test"
+            android:screenOrientation="portrait"
+            android:theme="@style/activityTheme" />
 
         <activity
-                android:name="com.bihe0832.android.base.test.touch.TouchRegionActivity"
-                android:configChanges="orientation|screenSize|keyboardHidden"
-                android:screenOrientation="portrait"
-                android:theme="@style/activityTheme" />
+            android:name="com.bihe0832.android.base.test.touch.TouchRegionActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/activityTheme" />
 
         <activity
-                android:name="com.bihe0832.android.base.test.request.TestHttpActivity"
-                android:configChanges="orientation|screenSize|keyboardHidden"
-                android:screenOrientation="portrait"
-                android:theme="@style/activityTheme"></activity>
+            android:name="com.bihe0832.android.base.test.request.TestHttpActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/activityTheme"></activity>
 
         <activity
-                android:name="com.bihe0832.android.base.test.network.TestNetworkActivity"
-                android:configChanges="orientation|screenSize|keyboardHidden"
-                android:screenOrientation="portrait"
-                android:theme="@style/activityTheme"></activity>
+            android:name="com.bihe0832.android.base.test.network.TestNetworkActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/activityTheme"></activity>
 
         <activity
-                android:name="com.bihe0832.android.base.test.card.TestListActivity"
-                android:configChanges="orientation|screenSize|keyboardHidden"
-                android:screenOrientation="portrait"
-                android:theme="@style/activityTheme"></activity>
+            android:name="com.bihe0832.android.base.test.card.TestListActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/activityTheme"></activity>
 
         <activity
-                android:name="com.bihe0832.android.base.test.webview.TestWebviewActivity"
-                android:configChanges="orientation|screenSize|keyboardHidden"
-                android:screenOrientation="portrait"
-                android:theme="@style/activityTheme"></activity>
+            android:name="com.bihe0832.android.base.test.webview.TestWebviewActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/activityTheme"></activity>
 
 
         <activity
-                android:name="com.bihe0832.android.common.test.log.TestLogActivity"
-                android:configChanges="orientation|screenSize|keyboardHidden"
-                android:screenOrientation="portrait"
-                android:theme="@style/activityTheme"></activity>
+            android:name="com.bihe0832.android.common.test.log.TestLogActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/activityTheme"></activity>
 
         <activity
-                android:name="com.bihe0832.android.base.test.permission.TestPermissionsActivity"
-                android:configChanges="orientation|screenSize|keyboardHidden"
-                android:screenOrientation="portrait"
-                android:theme="@style/permissionFullscreen" />
+            android:name="com.bihe0832.android.base.test.permission.TestPermissionsActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/permissionFullscreen" />
 
     </application>
 
