Dialog bug 修复，增加默认支持HTML的Textview、增加支持点击态的ImageView

--- a/APPTest/build.gradle
+++ b/APPTest/build.gradle
@@ -37,6 +37,9 @@ android {
         abortOnError false
     }
 
+    dataBinding {
+        enabled = true
+    }
 
     signingConfigs {
         debug {
