完善文件编辑查看工具，优化PopMenu

--- a/CommonAceEditor/src/main/AndroidManifest.xml
+++ b/CommonAceEditor/src/main/AndroidManifest.xml
@@ -6,6 +6,6 @@
         <activity
             android:name="com.bihe0832.android.common.ace.editor.AceEditActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:theme="@style/fullscreenActivityTheme" />
+            android:theme="@style/activityTheme" />
     </application>
 </manifest>
