--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework,LibWrapper"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "CommonWebview"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "4.20.25"
+ext.moduleVersionName = "4.20.26"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -52,7 +52,7 @@ ext.moduleInfo = [
                         ]
                 ]
         ],
-        "BaseDebug"                  : [
+        "BaseDebug"                 : [
                 "version"            : "",
                 "artifactId"         : "",
                 "apidependenciesList": [
@@ -77,7 +77,7 @@ ext.moduleInfo = [
                         "releaseApi": ["com.squareup.leakcanary:leakcanary-android-no-op:1.5.1"]
                 ]
         ],
-        "CommonDebug"                : [
+        "CommonDebug"               : [
                 "version"            : "4.20.25",
                 "artifactId"         : "common-debug",
                 "apidependenciesList": [
@@ -587,7 +587,7 @@ ext.moduleInfo = [
                 "version"            : "4.20.25",
                 "artifactId"         : "lib-ace-editor",
                 "apidependenciesList": [
-                        "LibFileSelect","LibOS","LibDialog","LibText"
+                        "LibFileSelect", "LibOS", "LibDialog", "LibText"
                 ]
         ]
 ]
