--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        package="com.bihe0832.android.test">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.bihe0832.android.test">
 
     <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -10,17 +10,17 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
-            android:name="com.bihe0832.android.base.debug.TestApplication"
-            android:allowBackup="true"
-            tools:replace="android:name"
-            android:icon="@mipmap/icon"
-            android:label="@string/app_name"
-            android:supportsRtl="true">
+        android:name="com.bihe0832.android.base.debug.TestApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/icon"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        tools:replace="android:name">
         <activity
-                android:name="com.bihe0832.android.test.TestSplashActivity"
-                android:configChanges="orientation|screenSize|keyboardHidden"
-                android:screenOrientation="portrait"
-                android:theme="@style/fullscreenActivityTheme">
+            android:name="com.bihe0832.android.test.TestSplashActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/fullscreenActivityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -28,10 +28,10 @@
         </activity>
 
         <activity
-                android:name="com.bihe0832.android.test.TestMainActivity"
-                android:configChanges="orientation|screenSize|keyboardHidden"
-                android:screenOrientation="sensor"
-                android:theme="@style/activityTheme">
+            android:name="com.bihe0832.android.test.TestMainActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="sensor"
+            android:theme="@style/activityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <!--                                <category android:name="android.intent.category.LAUNCHER" />-->
@@ -39,7 +39,12 @@
         </activity>
 
 
-
+        <activity
+            android:name="com.bihe0832.android.test.module.AAFDebugLogActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden|layoutDirection"
+            android:process=":test"
+            android:screenOrientation="portrait"
+            android:theme="@style/activityTheme" />
 
     </application>
 
