--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework,LibWrapper"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibWebview"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "4.20.49"
+ext.moduleVersionName = "4.20.50"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -518,7 +518,7 @@ ext.moduleInfo = [
                 "version"            : "4.20.22",
                 "artifactId"         : "lib-webview",
                 "apidependenciesList": [
-                        "com.tencent.tbs:tbssdk:44153",
+                        "com.tencent.tbs:tbssdk:44199",
                         "LibLog", "LibThread", "LibToast", "LibAPK"
                 ]
         ],
