--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework,LibWrapper"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibFlycoTabLayout,LibViewPager"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "4.20.61"
+ext.moduleVersionName = "4.21.0"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -214,7 +214,7 @@ ext.moduleInfo = [
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
                         "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification", "LibCustomView",
                         "LibRecycleviewExt", "LibTouchRegion", "LibViewExt", "LibWebview", "LibPermission",
-                        "LibImmersive", "LibFileSelect", "LibFloatview", "LibTextView", "LibAceEditor"
+                        "LibImmersive", "LibFileSelect", "LibFloatview", "LibTextView", "LibAceEditor","LibViewPager"
                 ]
         ],
         "LibUtils"                  : [
@@ -512,6 +512,13 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "com.android.support:support-v4:${project.android_support_version}",
                         "LibCommonUIUtils", "LibText"
+                ]
+        ],
+        "LibViewPager"                : [
+                "version"            : "4.20.22",
+                "artifactId"         : "lib-view-pager",
+                "apidependenciesList": [
+                        "com.android.support:support-v4:${project.android_support_version}"
                 ]
         ],
         "LibWebview"                : [
