--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework,LibWrapper"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibCommonUIUtils"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "4.21.10"
+ext.moduleVersionName = "4.21.11"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -550,7 +550,7 @@ ext.moduleInfo = [
                 "version"            : "4.21.10",
                 "artifactId"         : "lib-immersive",
                 "apidependenciesList": [
-                        "LibDeviceNetwork","LibImage",
+                        "LibDeviceNetwork","LibImage","LibCommonUIUtils",
                         "com.android.support:appcompat-v7:${project.android_support_version}"
                 ]
         ],
